<resources>
    <string name="app_name">Kimsu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firma_jaka_tam">Firma jakaś tam</string>
    <string name="open">Otworz</string>
    <string name="close">Zamknij</string>
    <string name="todo">TODO</string>
    <string name="zamow">Zamów</string>
    <string name="poznaj_nas">Poznaj nas</string>
    <string name="todo2">TODO</string>
    <string name="kimsu_nie_lubi_kompromis_w_najwa_niejsze_to_jako_i_smak_w_menu_kimsu_znajdziesz_autentyczne_smaki_i_techniki_kuchni_japo_skiej_n_npracowania_sushi_oferuje_od_klasycznych_rolek_nigiri_i_maki_po_bardziej_pomys_owe_i_kreatywne_rolki_z_unikalnymi_kombinacjami_smak_w_n_ngdyby_kimsu_mia_a_drugie_imi_to_pewnie_brzmia_oby_ramen_kt_ry_uwielbiamy_i_tworzymy_z_prawdziw_pasj_ka_dy_z_bulion_w_gotuje_si_godzinami_aby_stworzy_bogat_i_aromatyczn_baz_kt_ra_sprawia_e_nasz_ramen_jest_naprawd_wyj_tkowy_od_klasycznego_bulionu_tonkotsu_po_l_ejsze_buliony_chintan_i_paitan_n_nniezale_nie_od_tego_czy_szukasz_spokojnej_kolacji_we_dwoje_czy_te_uroczysto_ci_w_grupie_kimsu_to_idealne_miejsce_aby_delektowa_si_smakiem_kuchni_japo_skie">Kimsu nie lubi kompromisów, najważniejsze to jakość i smak. W menu Kimsu znajdziesz autentyczne smaki i techniki kuchni japońskiej.\n \nPracowania sushi oferuje od klasycznych rolek nigiri i maki po bardziej pomysłowe i kreatywne rolki z unikalnymi kombinacjami smaków.\n \nGdyby Kimsu miała drugie imię to pewnie brzmiałoby Ramen, który uwielbiamy i tworzymy z prawdziwą pasją. Każdy z bulionów gotuje się godzinami, aby stworzyć bogatą i aromatyczną bazę, która sprawia, że nasz ramen jest naprawdę wyjątkowy. Od klasycznego bulionu tonkotsu po lżejsze buliony chintan i paitan.\n \nNiezależnie od tego, czy szukasz spokojnej kolacji we dwoje, czy też uroczystości w grupie, Kimsu to idealne miejsce, aby delektować się smakiem kuchni japońskie</string>
    <string name="zapraszamy_na">Zapraszamy na</string>
    <string name="autorskie_sushi_i_nramen">autorskie sushi i \nramen</string>
    <string name="todo3">TODO</string>
    <string name="todo5">TODO</string>
    <string name="galeria">Galeria</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="_48_530_355_665">+48 530 355 665</string>
    <string name="zgierz_d_browskiego">ZGIERZ, DĄBROWSKIEGO</string>
    <string name="si_z_nami">SIĘ Z NAMI</string>
    <string name="skontaktuj">SKONTAKTUJ</string>
    <string name="akceptuj_polityk_prywatno_ci">Akceptuję Politykę prywatności</string>
    <string name="zam_w">Zamów</string>
    <string name="header_logo">TODO</string>
    <string name="gal_2">TODO</string>
    <string name="gal_7">TODO</string>
    <string name="gal_row_2">TODO</string>
    <string name="gal_3">TODO</string>
    <string name="gal_32">gal_3</string>
    <string name="zam_w12">Zamów</string>
    <string name="zam_w13">Zamów</string>
    <string name="zam_w14">Zamów</string>
    <string name="zam_w16">Zamów</string>
    <string name="zam_w2">Zamów</string>
    <string name="zam_w5">Zamów</string>
    <string name="guru_1">TODO</string>
    <string name="tylko_wie_e_n_naturalne_sk_adniki">Tylko świeże\n naturalne składniki</string>
    <string name="kimsu_nie_lubi_kompromis_w_najwa_niejsze_to_jako_i_smak_w_menu_kimsu_znajdziesz_autentyczne_smaki_i_techniki_kuchni_japo_skiej_pracowania_sushi_oferuje_od_klasycznych_rolek_nigiri_i_maki_po_bardziej_pomys_owe_i_kreatywne_rolki_z_unikalnymi_kombinacjami_smak_w_podawane_z_autorskim_wasabi_n_ngdyby_kimsu_mia_a_drugie_imi_to_pewnie_brzmia_oby_ramen_kt_ry_uwielbiamy_i_tworzymy_z_prawdziw_pasj_ka_dy_z_bulion_w_gotuje_si_godzinami_aby_stworzy_bogat_i_aromatyczn_baz_kt_ra_sprawia_e_nasz_ramen_jest_naprawd_wyj_tkowy_od_klasycznego_bulionu_tonkotsu_po_l_ejsze_buliony_chintan_i_paitan_n_nw_ofercie_znajdziesz_r_wnie_japo_skie_napoje_i_alkohole_japo_skie_piwo_i_whisky_dodatkowo_szeroka_oferta_przystawek_tempura_yakatori_wakame_zupa_miso_spr_bujesz_r_wnie_japo_skiej_herbaty_i_deser_w_z_matcha_n_nniezale_nie_od_tego_czy_szukasz_spokojnej_kolacji_we_dwoje_czy_te_uroczysto_ci_w_grupie_kimsu_to_idealne_miejsce_aby_delektowa_si_smakiem_jedzenia_kuchni_japo_skiej_n_nmo_esz_nas_odwiedzi_w_nzgierzu_ul_d_browskiego_20b_n_odzi_ul_piotrkowska_142_npabianicach_ul_groblena_8">Kimsu nie lubi kompromisów, najważniejsze to jakość i smak. W menu Kimsu znajdziesz autentyczne smaki i techniki kuchni japońskiej. Pracowania sushi oferuje od klasycznych rolek nigiri i maki po bardziej pomysłowe i kreatywne rolki z unikalnymi kombinacjami smaków podawane z autorskim wasabi.\n \nGdyby Kimsu miała drugie imię to pewnie brzmiałoby Ramen, który uwielbiamy i tworzymy z prawdziwą pasją. Każdy z bulionów gotuje się godzinami, aby stworzyć bogatą i aromatyczną bazę, która sprawia, że nasz ramen jest naprawdę wyjątkowy. Od klasycznego bulionu tonkotsu po lżejsze buliony chintan i paitan.\n \nW ofercie znajdziesz również japońskie napoje i alkohole (Japońskie piwo i whisky). Dodatkowo szeroka oferta przystawek, tempura, yakatori, wakame, zupa miso. Spróbujesz również japońskiej herbaty i deserów z matcha.\n \nNiezależnie od tego, czy szukasz spokojnej kolacji we dwoje, czy też uroczystości w grupie, Kimsu to idealne miejsce, aby delektować się smakiem jedzenia kuchni japońskiej.\n\nMożesz nas odwiedzić w \nZgierzu, ul. Dąbrowskiego 20b \nŁodzi, ul. Piotrkowska 142 \nPabianicach, ul. Groblena 8</string>
    <string name="formularz_n_kontaktowy">Formularz\n kontaktowy</string>
    <string name="map_screen">Map screen</string>
    <string name="d_piotrkowska">ŁÓDŹ, PIOTRKOWSKA</string>
    <string name="_48_533_500_942">+48 533 500 942</string>
    <string name="wy_lij">Wyślij</string>
    <string name="_48_575_738_494">+48 575 738 494</string>
    <string name="pabianice_tkalnia">PABIANICE, TKALNIA</string>
    <string name="layout_kontakt">TODO</string>
    <string name="telefon">Telefon</string>
    <string name="e_mail">E-mail</string>
    <string name="wiadomo">Wiadomość</string>
</resources>