<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/galeria_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingTop="25dp"
    android:paddingBottom="35dp"
    tools:context=".Galeria">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/gal_logo"
            android:layout_width="wrap_content"
            android:layout_height="241dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="#000000"
            android:contentDescription="@string/todo5"
            android:paddingTop="50dp"
            android:src="@drawable/kimsu_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/gal_header"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:background="#000000"
            android:fontFamily="@font/poppins_bold"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="15dp"
            android:text="@string/galeria"
            android:textAlignment="viewStart"
            android:textColor="#FBF2DB"
            android:textSize="34sp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:id="@+id/gal_row_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/gal_1"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo3"
                android:paddingStart="5dp"
                android:src="@drawable/img_4853"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/gal_2"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_weight="1"
                android:contentDescription="@string/gal_2"
                android:paddingEnd="5dp"
                android:src="@drawable/img_4444"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gal_row_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            tools:ignore="HardcodedText">

            <ImageView
                android:id="@+id/gal_3"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:paddingStart="5dp"
                android:src="@drawable/img_5610"
                tools:ignore="ContentDescription,RtlSymmetry" />

            <ImageView
                android:id="@+id/gal_4"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_weight="1"
                android:paddingEnd="5dp"
                android:src="@drawable/img_4883"
                tools:ignore="ContentDescription,RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gal_row_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="12dp">

            <ImageView
                android:id="@+id/gal_5"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo8"
                android:paddingStart="5dp"
                android:src="@drawable/img_6076"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/gal_6"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_weight="1"
                android:paddingEnd="5dp"
                android:src="@drawable/img_5884"
                tools:ignore="ContentDescription,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gal_row_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="12dp">

            <ImageView
                android:id="@+id/gal_7"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:paddingStart="5dp"
                android:src="@drawable/img_5832"
                tools:ignore="ContentDescription,HardcodedText,RtlSymmetry" />

            <ImageView
                android:id="@+id/gal_8"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_weight="1"
                android:paddingEnd="5dp"
                android:src="@drawable/img_5708"
                tools:ignore="ContentDescription,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gal_row_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="25dp">

            <ImageView
                android:id="@+id/gal_9"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo6"
                android:paddingStart="5dp"
                android:src="@drawable/img_2674"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/gal_10"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_weight="1"
                android:paddingEnd="5dp"
                android:src="@drawable/img_2958"
                tools:ignore="ContentDescription,RtlSymmetry" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>